[package]
name = "basic"
version = "0.1.0"
authors = ["Dmitrii Samsonov <blitzarx1@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
egui_graphs = { path = "../../", features=["egui_persistence"] }
egui = {git = "https://github.com/emilk/egui", features=["persistence"]}
eframe = {git = "https://github.com/emilk/egui"}
petgraph = "0.6"
wgpu = { version = "0.19.1", features = ["fragile-send-sync-non-atomic-wasm", "dx12", "metal", "wgsl"] }
